[package]
name = "denlibs"
version = "0.1.0"
edition = "2021"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "denlibs is a general-purpose libraries."
repository = "https://github.com/denix666/denlibs"
ducumentation = "https://github.com/denix666/denlibs/blob/main/README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
